# attendance-sheet-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  build.bat  course_db.py  create_template.py  generate_docx.py  input_parser.py  inspect_template.py  main.py  parse_outline.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: README.md  parse_config.example.json
template/: README.md  考勤表模板.docx
tests/: test_course_db.py  test_generate_docx.py  test_input_parser.py  test_parse_outline.py
